<resources>
    <string name="app_name">KeepDAM</string>
    <string name="title_home">Notas</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logo">KeepDAM</string>
    <string name="login">¡Inicia sesión!</string>
    <string name="phName">Nick</string>
    <string name="phPassword">Contraseña</string>
    <string name="btLogin">Login</string>
    <string name="fullname">Nombre Completo</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repetir contraseña</string>
    <string name="btRegister">Registro</string>
    <string name="new_nota">Registro Nota</string>
    <string name="confirm">Confirmar</string>
    <string name="title">Título</string>
    <string name="content">Contenido</string>
    <string name="add">Añadir</string>
    <string name="confirm_ask">¿Estás seguro de que deseas realizar esta acción?</string>
    <string name="yes">Sí</string>
</resources>
