<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="282dp"
        android:layout_height="501dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNick"
                android:layout_width="279dp"
                android:layout_height="49dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/phName"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTtitle" />

            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/editTextNick"
                app:layout_constraintStart_toStartOf="@+id/editTextNick"
                app:layout_constraintTop_toBottomOf="@+id/editTextNick" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="279dp"
                android:layout_height="49dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextFullName"
                app:layout_constraintStart_toStartOf="@+id/editTextFullName"
                app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />

            <EditText
                android:id="@+id/editTextPassword2"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/password2"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="194dp"
                android:layout_height="39dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/btRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="194dp"
                android:layout_height="39dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/btLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>